<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_version">2.0.0</string>
    <string name="api">1</string>
    <string name="notification">80259899916</string>
    <string name="analytic">UA-11707985-12</string>
    <string name="server">http://www.herherkerker.com</string>
    <string name="app_name">
        هرهرکرکر
    </string>

    <string name="joke">
جوک یا چیز بامزه ...
    </string>
    <string name="drawer_joke">
            ارسال جوک
    </string>
    <string name="joke_terms">
        تنها مطالب فارسی متعارف با جامعه (خالی از توهین سیاسی, قومیتی, مذهبی) پس از تایید تیم هرهرکرکر بصورت عمومی در می آیند.
    </string>
    <string name="joke_is_posted">
        جوک شما به سیستم ارسال شد.
    </string>
    <string name="venue_is_posted">
با تشکر . پاتوق شما "برای امکان checkin در ورژن بعدی" ثبت شد.
    </string>
    <string name="drawer_fans">
            به هواداران بپیوندید
    </string>
    <string name="winners">
لیست برندگان
    </string>
    <string name="winner">
هورا... شما بردید!
    </string>
    <string name="contact">
تماس بگیرید
    </string>
    <string name="badges">
مدالها : %d نفر را خنداندید
    </string>
    <string name="drawer_whats_reward">
               جوایز و کوپن تخفیف
    </string>
    <string name="drawer_business">
کسب و کار هستید؟
    </string>
    <string name="drawer_about">
اطلاعات نسخه
    </string>
    <string name="drawer_help">
راهنما
    </string>
    <string name="drawer_about_us">
        هرهرکرکر , نرم افزار رایگان اشتراک گذاری جوک می باشد که توسط تیم تکچوال استرالیا "Tectual pty ltd" با نمایندگی محدود در ایران  توسعه یافته است. تیم ما در حوزه سرگرمی های وب و موبایل و تجارت به سبک نوین تخصص داشته و فعالیت میکند.
    </string>
    <string name="about_us">
                درباره ما
    </string>
    <string name="version">
        نسخه برنامه
    </string>
    <string name="device_id">
شماره دستگاه
    </string>
    <string name="exiting">
برای خروج یکبار دیگر دکمه برگشت را فشار دهید
    </string>

    <string name="tab1">
        جوکها
    </string>
    <string name="tab2">
        کیف پول
    </string>
    <string name="tab3">
        پاتوق
    </string>
    <string name="drawer_open">
        منو اصلی باز شد
    </string>
    <string name="drawer_close">
        منو اصلی بسته شد
    </string>

    <string name="down">
        بکش پایین
    </string>
    <string name="refreshing">
        درحال دریافت
    </string>
    <string name="release">
        ول کن
    </string>

    <string name="splash">
        جوک , پاتوق , کوپن
    </string>

    <string name="profile">
        اطلاعات شما
    </string>
    <string name="first_name">
نام
    </string>
    <string name="last_name">
نام خانوادگی
    </string>
    <string name="phone">
        شماره همراه
    </string>

    <string name="submit">
        ثبت
    </string>
    <string name="cancel">
        انصراف
    </string>
    <string name="close">
بستن
    </string>
    <string name="yes">
بله
    </string>
    <string name="confirmation">
مطمئن هستید؟
    </string>
    <string name="flag_confirmation">
آیا این جوک باید حذف شود؟
    </string>
    <string name="reward_delete_confirmation">
حذف شود؟ در صورت حذف جایزه قادر به استفاده آن نیستید!
    </string>
    <string name="order">
تقاضای درج کوپن
    </string>
    <string name="help_email_title">
تماس با پشتیبانی هرهرکرکر
    </string>
    <string name="order_reward_email_title">
        تقاضای اطلاعات درج کوپن
    </string>
    <string name="order_reward_email_text">
لطفا نام خود , نام کسب و کارتان , شماره تماس , نوع کوپن اهدایی خود را برای ما از طریق این ایمیل ارسال کنید:
    </string>
    <string name="won_email_title">
درخواست ارسال جایزه
    </string>
    <string name="won_email_text">
لطفا این شماره  %s  را به همراه نام و نام خانوادگی و شماره تماس خود از طریق این ایمیل برای ما ارسال کنید.
    </string>

    <!--INTENTS-->
    <string name="sharing_via">
        اشتراک گذاری از طریق
    </string>
    <string name="attach_profile_image">
        انتخاب عکس صورت
    </string>
    <!--ERRORS-->
    <string name="error_no_crop">
دستگاه شما امکان تغییر سایز را ندارد. لطفا image resize نصب کنید.
    </string>
    <!--TEXT-->
    <string name="profile_policy">
تنها عکس شما به دیگر کاربران نمایش داده میشود و دیگر اطلاعات شما پنهان است و تنها جهت دادن جوایز و صحت حساب کاربری میباشد.
    </string>

    <string name="want">
می خوام
    </string>
    <string name="reject">
نمی خوام
    </string>
    <string name="use_now">
الان استفاده میکنم
    </string>
    <string name="info">
اطلاعات
    </string>
    <string name="reward_info">
اطلاعات جایزه
    </string>
    <string name="delete">
حذف
    </string>
    <string name="question">
        سوال
    </string>
    <string name="duration">
%d  روز
    </string>
    <string name="unlocked">
        جایزه آزاد شد. برای استفاده به کیف پول بروید.
    </string>
    <string name="rejected">
جایزه های بهتر در راه است...
    </string>
    <string name="reward_warning">
        دکمه زیر توسط پرسنل فروش درهنگام پرداخت باید فشار داده شود, درغیر اینصورت کوپن خود را از دست میدهید.
    </string>

    <string name="badge_active1">
٥ روز جوک بخونی
    </string>
    <string name="badge_active2">
٢٥ جوک قابل تایید بفرستی
    </string>
    <string name="badge_liked1">
جوکات ١٠٠ تا لایک بگیره
    </string>
    <string name="badge_liked2">
جوکات ٥٠٠ تا لایک بگیره
    </string>
    <string name="badge_liked3">
جوکات ١٢٠٠ تا لایک بگیره
    </string>
    <string name="badge_social1">
به ١٠ تا از دوستات بفرستی
    </string>
    <string name="badge_social2">
به ٣٠ تا از دوستات بفرستی
    </string>
    <string name="badge_social3">
به ١٠٠ تا از دوستات بفرستی
    </string>
</resources>
