<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    style="@style/DarkPage">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="200dp"
            android:gravity="center"
            android:layout_gravity="center">

            <ImageView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:src="@drawable/profile"
                style="@style/avatar"
                android:maxHeight="200dp"
                android:maxWidth="200dp"
                android:id="@+id/profile_image"
                />

            <ImageButton
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/ic_action_camera"
                android:background="#00000000"
                android:layout_margin="3dp"
                android:id="@+id/attach_profile_image"
                />

        </RelativeLayout>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/fullname"
            android:id="@+id/fullname"
            style="@style/Input"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/phone"
            android:id="@+id/phone"
            style="@style/Input"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/profile_policy"
            style="@style/Notes"/>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            >

            <Button
                android:id="@+id/cancel"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:layout_weight="1"
                style="@style/Secondary"
                android:text="@string/cancel"/>

            <Button
                android:id="@+id/save_profile"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:layout_weight="1"
                style="@style/Primary"
                android:text="@string/submit"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>